* `convert_file` now writes output to file specified by :to option, if given (#40)
* `convert_file` now returns output as string when value of :to option is falsy (#39)
* IO object can be used as value of :to option in `convert` and `convert_file` (#43)
* intermediate directories are now created in `convert` instead of `convert_file` (#45)
* allow library to be required via alias `kramdoc`

== 1.0.0.alpha.11 (2018-08-02) - @mojavelinux

=== Added

* add a public API (Kramdoc.convert and Kramdoc.convert_file) for converting input strings and paths, respectively (#31)
* update CLI to use public API (#31)
* run test suite on Windows using AppVeyor (#32)
* don't crash when empty comment occurs under primary text of list item
* convert phrase enclosed in <span> (#36)
* convert phrase enclosed in <mark>
* convert a bare <div> to a paragraph
* remove leading space from text if at beginning of line

=== Changed

* add code role to codespan if enclosed in quotes (required for AsciiDoc to parse properly) (#29)
* use unconstrained codespan if bounded on either side by a smart quote
* ignore auto-generated ID if heading has an explicit inline anchor

== 1.0.0.alpha.10 (2018-07-16) - @mojavelinux

=== Added

* add --auto-id-prefix CLI option to set the prefix added to all auto-generated section title IDs (#26)
* add :auto_links API option and --no-auto-links CLI option to control whether bare URLs are converted into links

=== Changed

* escape codespan text using passthrough if it contains a URL
* add blank line after list item that contains a table
* reset list level inside delimited block (e.g., quote block)
* move list level handling into writer

=== Fixed

* insert blank line above list continuation to attach to parent list item (#27)

== 1.0.0.alpha.9 (2018-07-10) - @mojavelinux

=== Changed

* escape codespan using pass macro if text contains double plus
* add specialcharacters replacement to inline pass macro